<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.league.LeagueInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_league_info"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic[2]"
            android:contentDescription="@string/league_banner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/img_banner"
            app:layout_constraintTop_toBottomOf="@+id/img_banner">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"
                        android:contentDescription="@string/logo_league"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/league_title"
                        app:layout_constraintVertical_bias="0.0"
                        tools:src="@tools:sample/avatars[3]" />

                    <TextView
                        android:id="@+id/league_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Bundesliga" />

                    <TextView
                        android:id="@+id/league_country"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@+id/league_title"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tv_country"
                        tools:text="Country" />

                    <TextView
                        android:id="@+id/league_division"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_division"
                        app:layout_constraintEnd_toEndOf="@+id/league_title"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tv_division"
                        tools:text="Division" />

                    <TextView
                        android:id="@+id/league_first_match"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_first_match"
                        app:layout_constraintEnd_toEndOf="@+id/league_title"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tv_first_match"
                        tools:text="First Match" />

                    <TextView
                        android:id="@+id/league_formed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_year_formed"
                        app:layout_constraintEnd_toEndOf="@+id/league_title"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tv_year_formed"
                        tools:text="Formed" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="180dp" />

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="start|center_horizontal"
                        android:text="@string/country"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toEndOf="@+id/img_logo"
                        app:layout_constraintTop_toBottomOf="@+id/league_title" />

                    <TextView
                        android:id="@+id/tv_division"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="start|center_horizontal"
                        android:text="@string/division"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="@+id/tv_country"
                        app:layout_constraintTop_toBottomOf="@+id/league_country" />

                    <TextView
                        android:id="@+id/tv_first_match"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="start|center_horizontal"
                        android:text="@string/first_match"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="@+id/tv_division"
                        app:layout_constraintTop_toBottomOf="@+id/league_division" />

                    <TextView
                        android:id="@+id/tv_year_formed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="start|center_horizontal"
                        android:text="@string/formed"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="@+id/tv_first_match"
                        app:layout_constraintTop_toBottomOf="@+id/league_first_match" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:layout_constraintEnd_toEndOf="@+id/card_info"
                app:layout_constraintStart_toStartOf="@+id/card_info"
                app:layout_constraintTop_toBottomOf="@+id/card_info">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="@+id/tv_description"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="Lorem ipsum" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_social"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_description"
                app:layout_constraintStart_toStartOf="@+id/card_description"
                app:layout_constraintTop_toBottomOf="@+id/card_description">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:weightSum="4">

                    <ImageButton
                        android:id="@+id/btn_facebook"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/logo_facebook"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_facebook" />

                    <ImageButton
                        android:id="@+id/btn_twitter"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/logo_twitter"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_twitter" />

                    <ImageButton
                        android:id="@+id/btn_web"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/logo_web"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_web" />

                    <ImageButton
                        android:id="@+id/btn_youtube"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/logo_youtube"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_youtube" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>